style/introductionToDataModeling.css
.title-introductionToDataModeling{
    font-size: 2.8rem;
    font-weight: 650;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #7ddcfa;
    z-index: 10;
    white-space: nowrap;
    text-align: center;
    word-break: break-word;
}

.subtitle-text-introductionToDataModeling{
    font-size: 2.5rem;
    font-weight: lighter;
    padding-top: 1%;
    padding-bottom: 1%;
}

.text-introductionToDataModeling{
    font-size: 1.5rem;
    font-weight: lighter;
    justify-content: center;
    text-align: justify;
}

.page-introductionToDataModeling{
    height: auto;
    width: 100%;
    background-color: rgb(38, 42, 46);
    background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(4,42,140,1) 35%, rgba(0,114,255,1) 100%);
    display: flex;
    flex-direction: column;
}

.container-introductionToDataModeling{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 10%;
}

.text-container-introductionToDataModeling{
    width: 70%;
    padding: 2%;
    margin-bottom: 5%;
    background-color: rgba(47, 51, 56, 0);
}

.section-introductionToDataModeling{
    position: relative;
    width: 100%;
    height: 100vh;
    padding: 5%;     
    display: flex;
    justify-content: center;
    align-items: center;
}

.section-introductionToDataModeling .img-introductionToDataModeling{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
    object-fit: cover;
}

.img-introductionToDataModeling{
    opacity: 0.4;
}

.li-introductionToDataModeling{
    list-style: none;
}
  
.li-introductionToDataModeling:before {
    content: "-->";
    padding-right: 5px;
}

.form-introductionToDataModeling{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.radioItem-introductionToDataModeling{
    display: flex;
    flex-direction: row;
    margin-left: 2%;
    margin-top: 5%;
}

.radioButton-introductionToDataModeling{
    flex-shrink: 0;
    margin-right: 2%;
    width: 25px;
    height: 25px;
}

.submit{
    text-align: center;
    background-color: transparent;
    border-style: solid;
    border-color: whitesmoke;
    padding: 5%;
    border-width: 1px;
    font-size: 2rem;
    font-weight: lighter;
}

#correctOption {
    margin: 3rem 0;
    font-size: 30px;
    font-weight: 500;
}

.submit:hover{
    cursor: pointer;
    transition: 0.3s;
    background-color: rgba(2, 0, 36, 0.568);
}

.header{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 30px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1;
}

.ul{
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
    margin-left: 20px; 
    text-decoration: none;
    padding: 6px 15px;
}
.li{
    list-style: none;
    margin-left: 20px; 
    text-decoration: none;
    padding: 6px 15px;
}
.a{
    text-decoration: none;
    padding: 6px 15px;
}
.a:hover, #active{
    background: #fff;
    color: rgba(0,114,255,1);
    border-radius: 20px;
    
}


  @media (max-width: 768px){
    .title-introductionToDataModeling{
      font-size: 2rem;
  }
  .subtitle-text-introductionToDataModeling{
      font-size: 1.3rem;
      padding-top: 5%;
      padding-bottom: 5%;
      text-align: center;
  }
  .text-introductionToDataModeling{
      font-size: 1.1rem;
      text-align: left;
  }
  .li{
    list-style: none;
    margin-left: 5px; 
    text-decoration: none;
    padding: 3px 7px;
}
.a{
    text-decoration: none;
    padding: 3px 7px;
}
}

  @media (max-width: 480px){
      .title-introductionToDataModeling{
        font-size: 1.5rem;
    }
    .subtitle-text-introductionToDataModeling{
        font-size: 1.3rem;
        padding-top: 5%;
        padding-bottom: 5%;
        text-align: center
    }
    .text-introductionToDataModeling{
        font-size: 1.1rem;
    }

    .submit{
        font-size: 1.5rem;
    }
}

@media (max-width: 328px){
  .title-introductionToDataModeling{
    font-size: 1.3rem;
  }
  .subtitle-text-introductionToDataModeling{
      font-size: 1.2rem;
      padding-top: 5%;
      padding-bottom: 5%;
      text-align: center;
  }
  .text-introductionToDataModeling{
      font-size: 1rem;
      letter-spacing: 0.5px;
  }
}

